--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
   <svg class="hero-bg-svg" width="100%" height="100%" viewBox="0 0 1440 600" fill="none" xmlns="http://www.w3.org/2000/svg" style="position:absolute;top:0;left:0;z-index:0;pointer-events:none;">
     <defs>
       <linearGradient id="yellowGrad" x1="0" y1="0" x2="1" y2="1">
-        <stop offset="0%" stop-color="#ffe066"/>
-        <stop offset="100%" stop-color="#ffd60a"/>
+        <stop offset="0%" stop-color="#F4C430"/>
+        <stop offset="100%" stop-color="#FFD700"/>
       </linearGradient>
     </defs>
     <path d="M0,400 Q360,300 720,400 T1440,400 L1440,600 L0,600 Z" fill="url(#yellowGrad)">
@@ -84,7 +84,7 @@
     <div class="form-card form-card-premium">
       <div class="form-header">
         <div class="form-icon-anim">
-          <svg width="48" height="48" viewBox="0 0 48 48" fill="none"><circle cx="24" cy="24" r="22" fill="#ffe066" stroke="#181818" stroke-width="2"/><path d="M24 26c-4.418 0-8 1.79-8 4v2h16v-2c0-2.21-3.582-4-8-4z" fill="#181818"/><circle cx="24" cy="18" r="6" fill="#181818"/></svg>
+          <svg width="48" height="48" viewBox="0 0 48 48" fill="none"><circle cx="24" cy="24" r="22" fill="#FFD700" stroke="#181818" stroke-width="2"/><path d="M24 26c-4.418 0-8 1.79-8 4v2h16v-2c0-2.21-3.582-4-8-4z" fill="#181818"/><circle cx="24" cy="18" r="6" fill="#181818"/></svg>
         </div>
         <h2>Student Login</h2>
         <button class="close-btn" onclick="closeAllForms()">×</button>
@@ -148,7 +148,7 @@
     <div class="form-card form-card-premium">
       <div class="form-header">
         <div class="form-icon-anim">
-          <svg width="48" height="48" viewBox="0 0 48 48" fill="none"><circle cx="24" cy="24" r="22" fill="#ffe066" stroke="#181818" stroke-width="2"/><path d="M16 32c0-2.21 3.582-4 8-4s8 1.79 8 4v2H16v-2z" fill="#181818"/><rect x="18" y="16" width="12" height="8" rx="4" fill="#181818"/></svg>
+          <svg width="48" height="48" viewBox="0 0 48 48" fill="none"><circle cx="24" cy="24" r="22" fill="#FFD700" stroke="#181818" stroke-width="2"/><path d="M16 32c0-2.21 3.582-4 8-4s8 1.79 8 4v2H16v-2z" fill="#181818"/><rect x="18" y="16" width="12" height="8" rx="4" fill="#181818"/></svg>
         </div>
         <h2>Admin Sign Up</h2>
         <button class="close-btn" onclick="closeAllForms()">×</button>
