--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="theme-color" content="#F4C430">
   <title>My Mess – Student Mess Management System</title>
   <link rel="stylesheet" href="styles.css">
 </head>
