Updated My Mess Website

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
       <span class="logo-text">My Mess</span>
     </a>
     <ul class="nav-links">
-      <li><a href="#home" class="nav-link">Home</a></li>
-      <li><a href="#about" class="nav-link">About Us</a></li>
+      <li><a href="#home" class="nav-link"><b>Home</b></a></li>
+      <li><a href="#about" class="nav-link"><b>About Us</b></a></li>
     </ul>
   </div>
 </nav>
@@ -249,12 +249,10 @@
 
 <!-- FOOTER -->
 <footer class="footer">
-  <div class="footer-logo-section">
-    <img src="logo1.png" alt="My Mess Logo" class="footer-logo" />
-    <span class="footer-brand">My Mess</span>
+<div class="footer-content">
+    <p>© 2025 My Mess. All Rights Reserved.</p>
+    <p class="footer-tagline">Made for Students, by Students</p>
   </div>
-  <p class="footer-copyright">&copy; 2025 My Mess. All Rights Reserved.</p>
-  <p class="footer-tagline">Made for Students, by Students</p>
 </footer>
 
 <!-- JAVASCRIPT -->
